moved to coming soon

--- a/_posts/posts/2025-04-22-BAMA.md
+++ b/_posts/posts/2025-04-22-BAMA.md
@@ -10,4 +10,7 @@ toc: true
 toc_label: "Malware analysis and reverse engineering of an AI trying to take over the world"
 ---
 
-Im the VUVian post
+Coming soon!
+
+Binary and malware analysis for 8 weeks straight, evasion and antidetections
+technique, obfuscated packings and symbolic execution.
