--- a/_posts/posts/2025-04-22-Guzz.md
+++ b/_posts/posts/2025-04-22-Guzz.md
@@ -10,4 +10,10 @@ toc: true
 toc_label: "Research project trying to implement ugly fuzzing in GDB"
 ---
 
-Im the Guzz post
+Coming soon!
+
+We developed a tool to allow people to take a snapshot of a process in gdb,
+attach a fuzzer and start it from that same instruction. Once found what the user
+was looking for it can easily revert to the token snapshot.
+
+Qemu memory management and process handling like it's raining.
