--- a/_posts/posts/2025-04-22-OShit.md
+++ b/_posts/posts/2025-04-22-OShit.md
@@ -10,4 +10,8 @@ toc: true
 toc_label: "8 weeks of pure hardcore kernel development"
 ---
 
-Im the OShit post
+Coming soon!
+
+8 weeks of kernel development from scratch, from the simple buddy allocator to
+virtual memory management, from user space implementation to KASLR, from multithreading
+to CPU hotswapping and memory swap capabilities!
