fixed link in guzz post

--- a/_posts/posts/2025-04-22-Guzz.md
+++ b/_posts/posts/2025-04-22-Guzz.md
@@ -363,7 +363,7 @@ After four weeks of blood, sweat, and segfaults, we emerged with a tool that:
 
 ## Real-World Usage (show off)
 
-Couple example showcase can be found at [Demos]({{ site.url }}{{ site.baseurl }}/assets/video/guzz/).
+Couple example showcase can be found at [Demos](https://github.com/ThomasAndreatta/ThomasAndreatta.github.io/tree/master/assets/video/guzz).
 These are video done with the initial version of Guzz, currently I do not have
 it installed and I ain't gonna install AFL++ and frida rn, sorry not sorry.
 
