--- a/_posts/posts/2025-04-22-Guzz.md
+++ b/_posts/posts/2025-04-22-Guzz.md
@@ -70,6 +70,7 @@ needed. Some ideas emerged as fixes to issues discovered while developing
 earlier ones, so everyone touched everything.
 
 Just to throw out some stats:
+> archMaster and surferBoy are not real usernames, keeping them anonim.
 ```
 ~/c/Guzz [main] λ gshowstats
 
